--- a/ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_models/CMakeLists.txt
+++ b/ocs2_robotic_examples/ocs2_perceptive_anymal/ocs2_anymal_models/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(${PROJECT_NAME}
   src/FrameDeclaration.cpp
   src/QuadrupedPinocchioMapping.cpp
   src/QuadrupedInverseKinematics.cpp
+  src/SpotInverseKinematics.cpp
   src/QuadrupedKinematics.cpp
   src/QuadrupedCom.cpp
 )
